[package]
name = "bending_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bending = { git = "https://github.com/Verdex/bending", version = "0.1.0", tag = "release-0.1.0" }
denest = { path = "../denest", version = "0.1.0" }